# mfd-parser-wb-de

./: .dockerignore  Dockerfile  INFO.md  Makefile  README.md  docker-compose.yml  pyproject.toml  scrapy.cfg  setup.cfg
app/: config.py  main.py
app/api/routes/: api.py  log_route.py  main_page.py
app/core/: models.py  utils.py
app/schemas/: input_schemas.py  output_schemas.py
app/services/: pipeline.py  transformers.py
scrapper/: items.py  middlewares.py  paths.py  pipelines.py  settings.py
scrapper/services/: pipeline.py  transformers.py
scrapper/spiders/: parse_comments.py  parse_posts.py  parse_topics.py  parser_mfd.py
scrapy_mfd/: paths.py  pipelines.py  settings.py
scrapy_mfd/spiders/: parser_mfd.py
tests/: assets.py  conftest.py  helpers.py
tests/app/routes/: test_main_route.py  test_search_by_text.py  test_search_by_thread_id.py  test_search_in_replies.py
